2017-03-10  Bruno Haible  <bruno@clisp.org>

	Warn before reserving an address range that might crash clisp.
	* Makefile.devel (GNULIB_CORE): Add vma-iter.
	* spvw_mmap.d: Include vma-iter.h.
	(is_large_range_unmapped_locals): New type.
	(is_large_range_unmapped_callback, is_large_range_unmapped, warn_before_reserving_range): New functions.
	(mmap_prepare): Invoke warn_before_reserving_range.
	* gllib/*: Update from gnulib.
	* glm4/*: Likewise.
	* gllib/Makefile.am, gllib/Makefile.in: Regenerated.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated.

2017-03-10  Bruno Haible  <bruno@clisp.org>

	Warn before doing mmap calls that might crash clisp.
	* configure.in: Test for mincore.
	* spvw_mmap.d (mincore_pageinfo_t): New type.
	(mincore_init, is_small_range_unmapped, warn_before_mmap): New
	functions.
	(mmap_init): Invoke mincore_init.
	(mmap_zeromap, mmap_filemap): Invoke warn_before_mmap.
	* src/configure, src/config.h.in: Regenerated.

2017-03-09  Sam Steingold  <sds@gnu.org>

	Fix module build failure with inttypes defined in base modules.
	* foreign.d, subr.d (PARSE-FOREIGN-INTTYPE): Accept second ERRORP
	argument; return 0 when the type is not found and ERRORP is NIL.
	* foreign1.lisp (parse-c-type): Pass ERRORP=T to PARSE-FOREIGN-INTTYPE.
	(finalize-coutput-file): Do not write register_foreign_inttype()
	for types already accepted by PARSE-FOREIGN-INTTYPE.

2017-03-09  Sam Steingold  <sds@gnu.org>

	Add asciz_startswith - a replacement for strncmp not requiring
	begin_system_call/end_system_call.
	* spvw.d (asciz_startswith): Implement.
	* lispbibl.d (asciz_startswith): Declare.
	* pathname.d (get_path_info): Use it instead of strncmp().

2017-03-09  Sam Steingold  <sds@gnu.org>

	* misc.d (LISP-IMPLEMENTATION-VERSION): Wrap atol() and strncmp()
	in begin_system_call/end_system_call.

2017-03-09  Bruno Haible  <bruno@clisp.org>

	Fix build failure with DEBUG_GCSAFETY.
	* lispbibl.d (INIT_SUBR_TAB, INIT_SYMBOL_TAB, INIT_OBJECT_TAB): Don't